--- a/index.html
+++ b/index.html
@@ -2,9 +2,117 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Chess</title>
+    <style>
+        tr,td{
+            text-align: center;
+            width: 50px;
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
-<p>HELLO</p>
+<table style="border-collapse: collapse">
+    <tr>
+        <td></td>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+    </tr>
+    <tr>
+        <td>A</td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+    </tr>
+    <tr>
+        <td>B</td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+    </tr>
+    <tr>
+        <td>C</td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+    </tr>
+    <tr>
+        <td>D</td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+    </tr>
+    <tr>
+        <td>E</td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+    </tr>
+    <tr>
+        <td>F</td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+    </tr>
+    <tr>
+        <td>G</td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+    </tr>
+    <tr>
+        <td>H</td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+        <td style="background: black"></td>
+        <td style="background: yellow"></td>
+    </tr>
+
+</table>
 </body>
 </html>
