--- a/Bai9/Test/Bai giang.html
+++ b/Bai9/Test/Bai giang.html
@@ -41,13 +41,21 @@
     // }
     // document.write(text);
         // Vòng lặp dowhile!!!
-    let text ="";
-    let i = 0;
-    do {
-        text +="the number is: " + i + "<br>";
-        i++;}
-        while (i<10);
-        document.write(text);
+    // let text ="";
+    // let i = 0;
+    // do {
+    //     text +="the number is: " + i + "<br>";
+    //     i++;}
+    //     while (i<10);
+    //     document.write(text);
+
+
+    let x = 1;
+    for (let i = 0; i < -1;
+    ) {
+        x = x + 1;
+    }
+    console.log(x);
     </script>
 </body>
 </html>
